created a package and imported stopwatch class to package, excluded algs4 lib

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=BoatTime
 application.vendor=Abj
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,16 +28,12 @@ dist.jar=${dist.dir}/BoatTime.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.algs4.jar=/Users/Abj/Dropbox/BOSKed/BoatTIme/lib/algs4.jar
-file.reference.itextpdf-5.3.0.jar=/Users/Abj/Downloads/itext-5.3.0/itextpdf-5.3.0.jar
 file.reference.itextpdf-5.3.0.jar-1=lib/itextpdf-5.3.0.jar
 file.reference.swing-layout-1.0.4.jar=lib/swing-layout-1.0.4.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.itextpdf-5.3.0.jar}:\
-    ${file.reference.algs4.jar}:\
     ${file.reference.swing-layout-1.0.4.jar}:\
     ${file.reference.itextpdf-5.3.0.jar-1}
 # Space-separated list of extra javac options
@@ -62,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Controller
+main.class=source.Controller
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
