--- a/build.xml
+++ b/build.xml
@@ -10,19 +10,27 @@
 <project name="BoatTime" default="default" basedir=".">
     <description>Builds, tests, and runs the project BoatTime.</description>
     <import file="nbproject/build-impl.xml"/>
-	 <target name="-post-jar">
-	   <jar jarfile="dist/Combined-dist.jar">
-	     <zipfileset src="${dist.jar}" excludes="META-INF/*" />
-	     <zipfileset src="lib/algs4.jar" excludes="META-INF/*" />
-	     <zipfileset src="lib/itextpdf-5.3.0.jar" excludes="META-INF/*" />
-	     <zipfileset src="lib/swing-layout-1.0.4.jar" excludes="META-INF/*" />
-	     <manifest>
-	         <attribute name="Controller" value="com.example.mypackage.Controller"/>
-	     </manifest>
-	   </jar>
-	 </target>
+   <target name="BigBoatTime" depends ="-post-jar">
+     <jar jarfile="dist/BigBoatTime.jar">
+       <zipfileset src="${dist.jar}" excludes="META-INF/*" />
+       <zipfileset src="lib/algs4.jar" excludes="META-INF/*" />
+       <zipfileset src="lib/itextpdf-5.3.0.jar" excludes="META-INF/*" />
+       <zipfileset src="lib/swing-layout-1.0.4.jar" excludes="META-INF/*" />
+       <zipgroupfileset dir = "lib/."/>
+       <manifest>
+           <attribute name="Controller" value="com.example.mypackage.Controller"/>
+       </manifest>
+     </jar>
+   </target>
     <!--
 
+<target name="YourBigJar" depends="-post-jar">
+  <jar destfile="BigJar.jar">
+    <zipfileset src="dist/Project1.jar"/>
+    <zipfileset src="../OtherProject/dist/project2.jar"/>
+    <zipgroupfileset dir="../libs/."/>
+  </jar>
+</target>
     There exist several targets which are by default empty and which can be 
     used for execution of your tasks. These targets are usually executed 
     before and after some main targets. They are: 
